# mqtt-presence-checker

./: Dockerfile  README.md  build.sh  pyproject.toml
doc/: conf.py  index.rst
mqtt_presence_checker/: __main__.py  minuterie.py  mqtt.py  ping.py  presence.py  util.py
sample_conf/: mqtt-presence-checker.service
tests/: test_foo.py  test_minuterie.py
