[tool.poetry]
name = "mqtt-presence-checker"
version = "0.1.0"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
pytest = "^7.1.3"
jsonargparse = "^4.15.1"
loguru = "^0.6.0"
docstring-parser = "^0.15"
asyncio-mqtt = "^0.12.1"
aioping = "^0.3.1"
pytest-asyncio = "^0.19.0"
pingparsing = "^1.4.0"
toml = "^0.10.2"
dotwiz = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
